--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
+    "@tanstack/react-query": "^5.40.0",
     "gsap": "^3.12.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "viem": "^2.13.1",
+    "wagmi": "^2.9.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
